# nmark

./: .gitignore  CONTRIBUTING.md  Cargo.toml  INSTALL.md  README.md  config.md
.agents/plugins/: marketplace.json
plugins/nmark/: .mcp.json
plugins/nmark/.codex-plugin/: plugin.json
src/: app.rs  cli.rs  document.rs  error.rs  extractor.rs  frontmatter.rs  http_client.rs  inputs.rs  lib.rs  main.rs  metadata.rs  settings.rs  tomlish.rs
